Updated image assets

--- a/projects/rowerstuff.html
+++ b/projects/rowerstuff.html
@@ -75,14 +75,14 @@
 
         <h2 class="grid-100 mobile-grid-100 content-heading" >Images</h2>
         <div class="grid-100 mobile-grid-100 carousel" style="margin-bottom: 40px;" data-flickity='{ "wrapAround": true, "imagesLoaded": true, "percentPosition": false}'>
-            <img src="../assets/RowerStuff/pace.png" alt="" />
+            <img src="../assets/RowerStuff/splitcalc.png" alt="" />
             <img src="../assets/RowerStuff/watts.png" alt="" />
-            <img src="../assets/RowerStuff/weight.png" alt="" />
-            <img src="../assets/RowerStuff/pred.png" alt="" />
-            <img src="../assets/RowerStuff/vo.png" alt="" />
-            <img src="../assets/RowerStuff/rate.png" alt="" />
             <img src="../assets/RowerStuff/percentage.png" alt="" />
-            <img src="../assets/RowerStuff/steadystate.png" alt="" />
+            <img src="../assets/RowerStuff/weight.png" alt="" />
+            <img src="../assets/RowerStuff/steady.png" alt="" />
+            <img src="../assets/RowerStuff/pauls.png" alt="" />
+            <img src="../assets/RowerStuff/vo2.png" alt="" />
+            <img src="../assets/RowerStuff/rate.png" alt="" />
         </div>
 
         <h2 class="grid-100 mobile-grid-100 content-heading">Try It Today!</h2>
