--- a/index.html
+++ b/index.html
@@ -2,34 +2,92 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
+
 		<link rel="icon" href="./favicon.png" />
-		<meta name="viewport" content="width=device-width" />
+
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="color-scheme" content="dark light" />
+
+		<script>
+			if (
+				localStorage.theme === 'dark' ||
+				(!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)
+			) {
+				document.documentElement.classList.add('dark');
+				darkMode = true;
+			} else {
+				document.documentElement.classList.remove('dark');
+				darkMode = false;
+			}
+		</script>
+
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout-1321ec73.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-817dfb80.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-7f3551f2.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-c1916556.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-8fdad4a4.js">
+		<link href="./_app/immutable/assets/_layout-1f553581.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/start-05e02975.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index-3d8551fe.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-5058222d.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.ts-9cbb603b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-da46b06b.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-84041f18.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-7f855b6e.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 
 
-<h1>Welcome to SvelteKit</h1>
-<p>Visit <a href="https://kit.svelte.dev">kit.svelte.dev</a> to read the documentation</p>
+<header class="sticky top-0 flex flex-col"><div class="px-4 sm:px-6 md:px-8 bg-white dark:bg-black"><div class="relative pt-6 pb-6 lg:pt-8 flex items-center justify-between"><a href="/"><svg class="w-auto h-16" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 600 600"><path id="Initials" class="fill-black dark:fill-white" d="M 90.72,405.00
+           C 90.72,405.00 132.20,197.56 132.20,197.56
+             132.20,197.56 290.72,197.56 290.72,197.56
+             290.72,197.56 281.23,245.00 281.23,245.00
+             281.23,245.00 177.56,245.00 177.56,245.00
+             177.56,245.00 171.45,275.56 171.45,275.56
+             171.45,275.56 266.58,275.56 266.58,275.56
+             266.58,275.56 257.50,321.00 257.50,321.00
+             257.50,321.00 162.36,321.00 162.36,321.00
+             162.36,321.00 155.05,357.56 155.05,357.56
+             155.05,357.56 260.92,357.56 260.92,357.56
+             260.92,357.56 251.44,405.00 251.44,405.00
+             251.44,405.00 90.72,405.00 90.72,405.00 Z
+           M 263.72,405.00
+           C 263.72,405.00 305.20,197.56 305.20,197.56
+             305.20,197.56 394.59,197.56 394.59,197.56
+             423.04,197.56 444.10,206.34 457.78,223.89
+             472.52,242.28 476.57,268.09 469.92,301.31
+             463.75,332.12 451.16,356.73 432.12,375.11
+             411.48,395.04 385.90,405.00 355.39,405.00
+             355.39,405.00 263.72,405.00 263.72,405.00 Z
+           M 350.56,245.00
+           C 350.56,245.00 328.05,357.56 328.05,357.56
+             328.05,357.56 359.58,357.56 359.58,357.56
+             372.10,357.56 383.02,353.61 392.33,345.69
+             403.46,336.26 410.92,322.09 414.70,303.19
+             418.64,283.46 417.98,268.98 412.73,259.77
+             407.02,249.92 395.00,245.00 376.67,245.00
+             376.67,245.00 350.56,245.00 350.56,245.00 Z"></path><path id="Dot" class="fill-brand-blue" d="M 460.23,405.00
+           C 460.23,405.00 470.94,351.56 470.94,351.56
+             470.94,351.56 525.78,351.56 525.78,351.56
+             525.78,351.56 515.08,405.00 515.08,405.00
+             515.08,405.00 460.23,405.00 460.23,405.00 Z"></path></svg></a>
+			<div class="flex items-center"><div class="md:hidden"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6"><path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"></path></svg></div>
+				<div class="hidden md:flex items-center"><nav><ul class="flex items-center space-x-8"><li><a href="/">Projects</a>
+								</li><li><a href="/">Blog</a>
+								</li></ul></nav></div>
+				<div class="flex items-center border-l border-slate-200 ml-6 pl-6 dark:border-slate-800"><button><span class="dark:hidden"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-5 h-5"><path d="M12 2.25a.75.75 0 01.75.75v2.25a.75.75 0 01-1.5 0V3a.75.75 0 01.75-.75zM7.5 12a4.5 4.5 0 119 0 4.5 4.5 0 01-9 0zM18.894 6.166a.75.75 0 00-1.06-1.06l-1.591 1.59a.75.75 0 101.06 1.061l1.591-1.59zM21.75 12a.75.75 0 01-.75.75h-2.25a.75.75 0 010-1.5H21a.75.75 0 01.75.75zM17.834 18.894a.75.75 0 001.06-1.06l-1.59-1.591a.75.75 0 10-1.061 1.06l1.59 1.591zM12 18a.75.75 0 01.75.75V21a.75.75 0 01-1.5 0v-2.25A.75.75 0 0112 18zM7.758 17.303a.75.75 0 00-1.061-1.06l-1.591 1.59a.75.75 0 001.06 1.061l1.591-1.59zM6 12a.75.75 0 01-.75.75H3a.75.75 0 010-1.5h2.25A.75.75 0 016 12zM6.697 7.757a.75.75 0 001.06-1.06l-1.59-1.591a.75.75 0 00-1.061 1.06l1.59 1.591z"></path></svg></span>
+						<span class="hidden dark:inline"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-5 h-5"><path fill-rule="evenodd" d="M9.528 1.718a.75.75 0 01.162.819A8.97 8.97 0 009 6a9 9 0 009 9 8.97 8.97 0 003.463-.69.75.75 0 01.981.98 10.503 10.503 0 01-9.694 6.46c-5.799 0-10.5-4.701-10.5-10.5 0-4.368 2.667-8.112 6.46-9.694a.75.75 0 01.818.162z" clip-rule="evenodd"></path></svg></span></button></div></div></div></div>
+	<div class="bg-gradient-to-b dark:from-black from-white to-transparent h-12"></div></header>
+<footer class="w-full"><div class="flex flex-col items-center justify-center space-y-2"><p class="text-sm">© Euan Deas 2023</p>
+		<div class="flex items-center space-x-4"><a href="mailto:euandeasapps@gmail.com" target="_blank" rel="noopener" title="Send an email to euandeasapps@gmail.com"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-5 h-5"><path d="M1.5 8.67v8.58a3 3 0 003 3h15a3 3 0 003-3V8.67l-8.928 5.493a3 3 0 01-3.144 0L1.5 8.67z"></path><path d="M22.5 6.908V6.75a3 3 0 00-3-3h-15a3 3 0 00-3 3v.158l9.714 5.978a1.5 1.5 0 001.572 0L22.5 6.908z"></path></svg></a>
+	<a href="https://github.com/euandeas" target="_blank" rel="noreferrer" title="See my GitHub profile"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-5 h-5"><title>GitHub</title><path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"></path></svg></a>
+	<a href="https://www.linkedin.com/in/euandeas/" target="_blank" rel="noreferrer" title="Connect on LinkedIn"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-5 h-5"><title>LinkedIn</title><path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"></path></svg></a></div></div></footer>
 
 
-		<script type="module" data-sveltekit-hydrate="1oibf46">
-			import { start } from "./_app/immutable/start-817dfb80.js";
+		<script type="module" data-sveltekit-hydrate="1ohdxpr">
+			import { start } from "./_app/immutable/start-05e02975.js";
 
 			start({
 				env: {},
 				paths: {"base":"","assets":""},
-				target: document.querySelector('[data-sveltekit-hydrate="1oibf46"]').parentNode,
-				version: "1672960680648",
+				target: document.querySelector('[data-sveltekit-hydrate="1ohdxpr"]').parentNode,
+				version: "1673126483611",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
