--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
 		</script>
 
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout-1f553581.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-05e02975.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-3d8551fe.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-5058222d.js">
+		<link href="./_app/immutable/assets/_layout-0749aefb.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/start-3914eb8a.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index-eafc2270.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-a979b6af.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.ts-9cbb603b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-da46b06b.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-7f855b6e.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-a276eab6.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 
 
-<header class="sticky top-0 flex flex-col"><div class="px-4 sm:px-6 md:px-8 bg-white dark:bg-black"><div class="relative pt-6 pb-6 lg:pt-8 flex items-center justify-between"><a href="/"><svg class="w-auto h-16" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 600 600"><path id="Initials" class="fill-black dark:fill-white" d="M 90.72,405.00
+<header class="relative"><div class="px-4 sm:px-6 md:px-8 bg-white dark:bg-black"><div class="relative pt-6 pb-6 lg:pt-8 flex items-center justify-between"><a href="/"><svg class="w-auto h-16" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 600 600"><path id="Initials" class="fill-black dark:fill-white" d="M 90.72,405.00
            C 90.72,405.00 132.20,197.56 132.20,197.56
              132.20,197.56 290.72,197.56 290.72,197.56
              290.72,197.56 281.23,245.00 281.23,245.00
@@ -72,22 +72,27 @@
 								</li><li><a href="/">Blog</a>
 								</li></ul></nav></div>
 				<div class="flex items-center border-l border-slate-200 ml-6 pl-6 dark:border-slate-800"><button><span class="dark:hidden"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-5 h-5"><path d="M12 2.25a.75.75 0 01.75.75v2.25a.75.75 0 01-1.5 0V3a.75.75 0 01.75-.75zM7.5 12a4.5 4.5 0 119 0 4.5 4.5 0 01-9 0zM18.894 6.166a.75.75 0 00-1.06-1.06l-1.591 1.59a.75.75 0 101.06 1.061l1.591-1.59zM21.75 12a.75.75 0 01-.75.75h-2.25a.75.75 0 010-1.5H21a.75.75 0 01.75.75zM17.834 18.894a.75.75 0 001.06-1.06l-1.59-1.591a.75.75 0 10-1.061 1.06l1.59 1.591zM12 18a.75.75 0 01.75.75V21a.75.75 0 01-1.5 0v-2.25A.75.75 0 0112 18zM7.758 17.303a.75.75 0 00-1.061-1.06l-1.591 1.59a.75.75 0 001.06 1.061l1.591-1.59zM6 12a.75.75 0 01-.75.75H3a.75.75 0 010-1.5h2.25A.75.75 0 016 12zM6.697 7.757a.75.75 0 001.06-1.06l-1.59-1.591a.75.75 0 00-1.061 1.06l1.59 1.591z"></path></svg></span>
-						<span class="hidden dark:inline"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-5 h-5"><path fill-rule="evenodd" d="M9.528 1.718a.75.75 0 01.162.819A8.97 8.97 0 009 6a9 9 0 009 9 8.97 8.97 0 003.463-.69.75.75 0 01.981.98 10.503 10.503 0 01-9.694 6.46c-5.799 0-10.5-4.701-10.5-10.5 0-4.368 2.667-8.112 6.46-9.694a.75.75 0 01.818.162z" clip-rule="evenodd"></path></svg></span></button></div></div></div></div>
-	<div class="bg-gradient-to-b dark:from-black from-white to-transparent h-12"></div></header>
+						<span class="hidden dark:inline"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-5 h-5"><path fill-rule="evenodd" d="M9.528 1.718a.75.75 0 01.162.819A8.97 8.97 0 009 6a9 9 0 009 9 8.97 8.97 0 003.463-.69.75.75 0 01.981.98 10.503 10.503 0 01-9.694 6.46c-5.799 0-10.5-4.701-10.5-10.5 0-4.368 2.667-8.112 6.46-9.694a.75.75 0 01.818.162z" clip-rule="evenodd"></path></svg></span></button></div></div></div></div></header>
+<div class="relative flex flex-col"><div class="bg-white dark:bg-black pb-20 sm:pb-24 lg:pb-32"><div class="max-w-5xl mx-auto pt-20 sm:pt-24 lg:pt-32"><h1 class="text-slate-900 font-extrabold text-4xl sm:text-5xl lg:text-6xl tracking-tight text-center dark:text-white">Hello, I&#39;m Euan.
+			</h1>
+			<p class="mt-6 text-lg text-slate-600 text-center max-w-3xl mx-auto dark:text-slate-400">A student software developer, studying computer science at the University of Nottingham.
+			</p></div></div>
+	<div class="bg-gradient-to-b dark:from-black from-white to-transparent h-16"></div></div>
+<div class="block border border-gray-200 dark:border-gray-900 max-w-5xl mx-auto p-6 m-5 bg-white rounded-lg shadow-md dark:bg-black"></div>
 <footer class="w-full"><div class="flex flex-col items-center justify-center space-y-2"><p class="text-sm">© Euan Deas 2023</p>
 		<div class="flex items-center space-x-4"><a href="mailto:euandeasapps@gmail.com" target="_blank" rel="noopener" title="Send an email to euandeasapps@gmail.com"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-5 h-5"><path d="M1.5 8.67v8.58a3 3 0 003 3h15a3 3 0 003-3V8.67l-8.928 5.493a3 3 0 01-3.144 0L1.5 8.67z"></path><path d="M22.5 6.908V6.75a3 3 0 00-3-3h-15a3 3 0 00-3 3v.158l9.714 5.978a1.5 1.5 0 001.572 0L22.5 6.908z"></path></svg></a>
 	<a href="https://github.com/euandeas" target="_blank" rel="noreferrer" title="See my GitHub profile"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-5 h-5"><title>GitHub</title><path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"></path></svg></a>
 	<a href="https://www.linkedin.com/in/euandeas/" target="_blank" rel="noreferrer" title="Connect on LinkedIn"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="w-5 h-5"><title>LinkedIn</title><path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"></path></svg></a></div></div></footer>
 
 
-		<script type="module" data-sveltekit-hydrate="1ohdxpr">
-			import { start } from "./_app/immutable/start-05e02975.js";
+		<script type="module" data-sveltekit-hydrate="24u0qd">
+			import { start } from "./_app/immutable/start-3914eb8a.js";
 
 			start({
 				env: {},
 				paths: {"base":"","assets":""},
-				target: document.querySelector('[data-sveltekit-hydrate="1ohdxpr"]').parentNode,
-				version: "1673126483611",
+				target: document.querySelector('[data-sveltekit-hydrate="24u0qd"]').parentNode,
+				version: "1673302222817",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
