--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
     <footer class="footer">
       <div class="footer-inner">
-        <a class="footer-item" href="mailto:euandeasapps@gmail.com">Contact</a>
+        <a class="footer-item" href="mailto:contact@euandeas.com">Contact</a>
         <div class="footer-item" style="margin-left: auto;">
           <a href="https://www.linkedin.com/in/euan-deas-6204b3193/"><img id="linkedinicon" src="assets/linkedin.svg" style="margin: 0 auto; display: block; height: 20px; width:20px; padding-right: 20px;" alt="linkedin"/></a>
           <a href="https://www.instagram.com/euandeas_dev"><img id="instaicon" src="assets/instagram.svg" style="margin: 0 auto; display: block; height: 20px; width:20px; padding-right: 20px;" alt="instagram"/></a>
